--- a/theme.yaml
+++ b/theme.yaml
@@ -2,10 +2,10 @@ id: xuanhuang_hux
 name: Hux
 author:
   name: Xuan Huang
-  website: https://huangxuan.me
+  website: http://m.langhe.vip
 description:
 logo:
-website: https://github.com/halo-dev/halo-theme-hux
-repo: https://github.com/halo-dev/halo-theme-hux
+website: https://github.com/I-Xochitl/halo-theme-hux
+repo: https://github.com/I-Xochitl/halo-theme-hux
 version: 1.3.1
 require: 1.3.0
